# vkr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MultiEngine.sln  MultiEngine.sln.DotSettings  MultiEngine.vcxproj  MultiEngine.vcxproj.filters  README.md  arithmetic_error.h  custom_runtime_error.h  dynamic_array.h  error_handling.h  except.h  field.h  format.cc  format.h  general.h  general_ops.h  invalid_action_error.h  io_stream.h  lu_decomposition.cc  lu_decomposition.h  matrix.cc  matrix.h  message.h  out_of_range.h  predefs.h  strings.h  vector.cc  vector.h  win_main.cc  win_main.h  zero_division_error.h
demo/: CMakeLists.txt  app.cpp  cube4d.cpp  simplexes.cpp
demo/inc/: app.h  framework.h  glutil.h  linalg.h  utils.h
demo/rest/: CMakeLists.txt
demo/rest/inc/: framework.h  linalg.h
demo/rest/src/: cube.cpp  multiD.cpp  triangle.cpp
demo/src/: app.cpp  app.h  cube3d.cpp  cube4d.cpp  framework.cpp  linalg.cpp  linalg.h  main.cpp  simplexes.cpp  triangle3d.cpp  triangles.cpp  utils.cpp  utils.h
demo/src/shaders/: shader.vert
dependencies/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
lib/: CMakeLists.txt  pch.h
lib/inc/: Buffer.h  Converters.h  predefs.h
lib/inc/base/: Buffer.h  CLKernel.h  CLModule.h  CommandQueue.h  Context.h  Device.h  Dispatch.h  Event.h  Kernel.h  Module.h  Platform.h  ReferenceHandler.h  Wrapper.h
lib/inc/buffers/: Buffer.h  Uniform.h
lib/inc/general/: predefs.h
lib/inc/kernels/: Source.h  base.cl.h  bin_rasterizer.cl.h  fine_rasterizer.cl.h  simplex_reducing.cl.h  vertex_shading.cl.h
lib/inc/pipeline/: BinRasterizer.h  FineRasterizer.h  Pipeline.h  PipelineCL.h  Rasterizer.h  SimplexReducer.h  Stage.h  VertexBuffer.h  VertexProcessor.h  VertexShader.h
lib/inc/rendering/: DrawObject.h  Render.h  RenderData.h  RenderState.h
lib/inc/shaders/: Shader.h  ShaderSubTypes.h
lib/inc/utils/: StandardDispatch.h  converters.h  files.h  memory.h  rendermath.h
lib/public/Nraster/: Buffer.h  buffer.h  predefs.h  projection.h  render.h  shader.h
lib/resources/kernels/: rasterizer_dim_generic.cl
lib/src/: DrawObject.cpp
lib/src/base/: Buffer.cpp  CLModule.cpp  CommandQueue.cpp  Context.cpp  Device.cpp  Event.cpp  Kernel.cpp  Module.cpp  Platform.cpp
lib/src/general/: predefs.cpp
lib/src/kernels/: Source.cpp  bin_rasterizer.cl.cpp  fine_rasterizer.cl.cpp  simplex_reducing.cl.cpp  vertex_shading.cl.cpp
lib/src/pipeline/: BinRasterizer.cpp  FineRasterizer.cpp  Pipeline.cpp  Rasterizer.cpp  SimplexReducer.cpp  Stage.cpp  VertexBuffer.cpp  VertexProcessor.cpp  VertexShader.cpp
lib/src/rendering/: Render.cpp  RenderData.cpp
lib/src/utils/: converters.cpp  files.cpp  memory.cpp
project/: CMakeLists.txt
project/inc/base/: Buffer.h  Dispatch.h
project/inc/kernels/: base.cl.h  bin_rasterizer.cl.h  fine_rasterizer.cl.h  simplex_reducing.cl.h
project/inc/pipeline/: BinRasterizer.h  FineRasterizer.h  VertexShader.h
project/inc/rendering/: Render.h
project/inc/utils/: rendermath.h
project/include/: mul.h
project/include/NR/: nr.h
project/main/: .main.cpp.swp  CMakeLists.txt
project/src/: predefs.h
project/src/base/: BitField.h  BitField.inl  Buffer.cpp  Buffer.h  CommandQueue.cpp  CommandQueue.h  CommandQueue.inl  Context.cpp  Context.h  Device.cpp  Device.h  DeviceType.h  Dispatch.h  Event.cpp  Event.h  Exceptions.cpp  Exceptions.h  Kernel.cpp  Kernel.h  MemoryView.cpp  MemoryView.h  Module.cpp  Module.h  Platform.cpp  Platform.h  ReferenceHandler.h  RootDevice.h  Views.cpp  Views.h  Wrapper.h  Wrapper.inl
project/src/kernels/: Source.cpp  base.cl.cpp  base.cl.h  bin_rasterizer.cl.cpp  bin_rasterizer.cl.h  fine_rasterizer.cl.cpp  fine_rasterizer.cl.h  simplex_reducer.cl.cpp  simplex_reducer.cl.h  triangle_setup.cl.cpp  triangle_setup.cl.h  vertex_post_processor.cl.cpp  vertex_post_processor.cl.h  vertex_reducer.cl.cpp  vertex_reducer.cl.h  vertex_shading.cl.cpp
project/src/pipeline/: BinRasterizer.cpp  BinRasterizer.h  FineRasterizer.cpp  FineRasterizer.h  Pipeline.cpp  Pipeline.h  SimplexReducer.h  Source.cpp  Source.h  VertexBuffer.h  VertexPostProcessor.cpp  VertexPostProcessor.h  VertexReducer.cpp  VertexReducer.h  VertexShader.cpp
project/src/rendering/: Render.h
project/src/utils/: StandardDispatch.h  converters.cpp  converters.h  rendermath.cpp  rendermath.h
project/test/: CMakeLists.txt
src/: CMakeLists.txt  Example.cpp  TriangleSetupContext.cpp  TriangleSetupContext.h  mul.cpp  predefs.h
src/base/: BitField.h  BitField.inl  Buffer.cpp  Buffer.h  CommandQueue.cpp  CommandQueue.h  CommandQueue.inl  Context.cpp  Context.h  Device.cpp  Device.h  DeviceType.h  Event.cpp  Event.h  Exceptions.cpp  Exceptions.h  Kernel.cpp  Kernel.h  Memory.cpp  Memory.h  Module.cpp  Module.h  Platform.cpp  Platform.h  RootDevice.cpp  RootDevice.h  Views.cpp  Views.h  Wrapper.h  Wrapper.inl
src/gpu/: AllKernels.cpp  AllKernels.h  CMakeLists.txt  Config.comph  Simple.comp  TriangleSetup.comp  TriangleSetupUtil.comp
src/gpu/host-interface/: APIUtils.cpp  APIUtils.h  DeviceModuleAPI.h  DeviceModuleAPI.inl  TriangleSetupAPI.cpp
src/gpu/shared/: compatibility.h  device_compatibility.h  host_compatibility.h  host_device_compatibility.h  triangle_setup_types.h
src/util/: CommonManagedResrouces.h  Containers.h  Containers.inl  DeviceModuleAPI.h  DeviceModuleAPI.inl  LocalManagedHandle.h  LocalManagedHandle.inl
test/: CMakeLists.txt  includes.cpp  includes.h  multest.cpp  rasterizer_tests.h  tests.cpp  unify_buffers_tests.h
test/inc/: includes.h
test/inc/base/: all.h  base_utils.h  compilation.h  conversion_duality.h  ndc_from_screen.h  screen_from_ndc.h
test/inc/modules/: all_module_tests.h  base_tests.h
test/modules/: all.h  all_module_tests.h  base_tests.h  bin_tests.h
test/modules/base/: compilation.h
test/modules/binning/: bin_utils.h  overflow.h  reduce_buffer.h  triangle_bin.h
test/modules/fine/: fine_utils.h  point_in_triangle.h  (+1 more)
test/rasterizer/: all_tests.h  line_tests.h  point_tests.h  test_templates.h
test/src/: Main.cpp  includes.cpp  includes.h  tests.cpp
(+152 files in other folders)
