CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

IF (BUILD_GTEST)
	ADD_SUBDIRECTORY(googletest EXCLUDE_FROM_ALL)
ENDIF()

IF (BUILD_GLEW)
	ADD_SUBDIRECTORY(glew)
	SET(GLFW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include")
ENDIF()

IF (FIND_GLFW)
	ADD_SUBDIRECTORY(glfw)
	SET(GLEW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glew/include"
ENDIF()
