CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

FILE(COPY src/shaders/ DESTINATION shaders)

LINK_LIBRARIES(
	${OPENGL_LIBRARIES}
	Nraster 
	glfw
	${GLEW_LIBRARIES})

INCLUDE_DIRECTORIES(
	${OPENGL_INCLUDE_DIRS}
	${GLEW_INCLUDE_DIRS}
	${GLFW_INCLUDE_DIRS}
	inc
	${NRASTER_INCLUDE_DIRS})

ADD_EXECUTABLE(triangle src/triangle.cpp)
ADD_EXECUTABLE(cube src/cube.cpp)
